tests/ui/solver-attribute/multiple-attrs/expected
error: Only one '#[kani::solver]' attribute is allowed per harness\
test.rs:\
  |\
5 | #[kani::solver(kissat)]\
  | ^^^^^^^^^^^^^^^^^^^^^^^
error: aborting due to previous error
